--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">JQueryUpload</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">35,354</td><td></td><td></td></tr>
+<tr><th colspan="7">Facebook</th></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">4,608</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">JQueryUpload</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.jquery.datatable.Level_11_Upload_Files</td><td><a href="#m0">Upload_01_One_File_Per_Time</a></td><td rowspan="1">1667838307415</td><td rowspan="1">5370</td></tr><tr class="passedeven"><td><a href="#m1">Upload_02_Multi_Files_Per_Time</a></td><td rowspan="1">1667838312786</td><td rowspan="1">21993</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Facebook</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.facebook.register.Level_13_Element_Undisplayed</td><td><a href="#m0">TC_01_Verify_Element_Displayed</a></td><td rowspan="1">1668093338876</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m1">TC_02_Verify_Element_Undisplayed_In_DOM</a></td><td rowspan="1">1668093338880</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">TC_03_Verify_Element_Undisplayed_Not_In_DOM</a></td><td rowspan="1">1668093338882</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.jquery.datatable.Level_11_Upload_Files#Upload_01_One_File_Per_Time</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.jquery.datatable.Level_11_Upload_Files#Upload_02_Multi_Files_Per_Time</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m0">com.facebook.register.Level_13_Element_Undisplayed#TC_01_Verify_Element_Displayed</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.facebook.register.Level_13_Element_Undisplayed#TC_02_Verify_Element_Undisplayed_In_DOM</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.facebook.register.Level_13_Element_Undisplayed#TC_03_Verify_Element_Undisplayed_Not_In_DOM</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
