--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-JQueryUpload" class="navigator-link">
-              <span class="suite-name border-passed">JQueryUpload</span>
+            <a href="#" panel-name="suite-Facebook" class="navigator-link">
+              <span class="suite-name border-passed">Facebook</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-JQueryUpload" class="navigator-link ">
-                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryUpload.xml</span>
+                  <a href="#" panel-name="test-xml-Facebook" class="navigator-link ">
+                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runFacebookTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-JQueryUpload" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Facebook" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-JQueryUpload" class="navigator-link ">
+                  <a href="#" panel-name="group-Facebook" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-JQueryUpload" class="navigator-link ">
+                  <a href="#" panel-name="times-Facebook" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-JQueryUpload" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Facebook" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-JQueryUpload" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Facebook" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-JQueryUpload" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Facebook" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -91,26 +91,31 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-JQueryUpload" class="hide-methods passed suite-JQueryUpload"> (hide)</a> <!-- hide-methods passed suite-JQueryUpload -->
-                      <a href="#" panel-name="suite-JQueryUpload" class="show-methods passed suite-JQueryUpload"> (show)</a> <!-- show-methods passed suite-JQueryUpload -->
+                      <a href="#" panel-name="suite-Facebook" class="hide-methods passed suite-Facebook"> (hide)</a> <!-- hide-methods passed suite-Facebook -->
+                      <a href="#" panel-name="suite-Facebook" class="show-methods passed suite-Facebook"> (show)</a> <!-- show-methods passed suite-Facebook -->
                     </span>
-                    <div class="method-list-content passed suite-JQueryUpload">
+                    <div class="method-list-content passed suite-Facebook">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-JQueryUpload" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_01_One_File_Per_Time">Upload_01_One_File_Per_Time</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Facebook" title="com.facebook.register.Level_13_Element_Undisplayed" class="method navigator-link" hash-for-method="TC_01_Verify_Element_Displayed">TC_01_Verify_Element_Displayed</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-JQueryUpload" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_02_Multi_Files_Per_Time">Upload_02_Multi_Files_Per_Time</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Facebook" title="com.facebook.register.Level_13_Element_Undisplayed" class="method navigator-link" hash-for-method="TC_02_Verify_Element_Undisplayed_In_DOM">TC_02_Verify_Element_Undisplayed_In_DOM</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-JQueryUpload -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Facebook" title="com.facebook.register.Level_13_Element_Undisplayed" class="method navigator-link" hash-for-method="TC_03_Verify_Element_Undisplayed_Not_In_DOM">TC_03_Verify_Element_Undisplayed_Not_In_DOM</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Facebook -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -121,53 +126,63 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-JQueryUpload" class="panel JQueryUpload">
-          <div class="suite-JQueryUpload-class-passed">
+        <div panel-name="suite-Facebook" class="panel Facebook">
+          <div class="suite-Facebook-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.jquery.datatable.Level_11_Upload_Files</span>
+              <span class="class-name">com.facebook.register.Level_13_Element_Undisplayed</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Upload_01_One_File_Per_Time">
-                  </a> <!-- Upload_01_One_File_Per_Time -->
-                  <span class="method-name">Upload_01_One_File_Per_Time</span>
+                  <a name="TC_01_Verify_Element_Displayed">
+                  </a> <!-- TC_01_Verify_Element_Displayed -->
+                  <span class="method-name">TC_01_Verify_Element_Displayed</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Upload_02_Multi_Files_Per_Time">
-                  </a> <!-- Upload_02_Multi_Files_Per_Time -->
-                  <span class="method-name">Upload_02_Multi_Files_Per_Time</span>
+                  <a name="TC_02_Verify_Element_Undisplayed_In_DOM">
+                  </a> <!-- TC_02_Verify_Element_Undisplayed_In_DOM -->
+                  <span class="method-name">TC_02_Verify_Element_Undisplayed_In_DOM</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_03_Verify_Element_Undisplayed_Not_In_DOM">
+                  </a> <!-- TC_03_Verify_Element_Undisplayed_Not_In_DOM -->
+                  <span class="method-name">TC_03_Verify_Element_Undisplayed_Not_In_DOM</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-JQueryUpload-class-passed -->
-        </div> <!-- panel JQueryUpload -->
-        <div panel-name="test-xml-JQueryUpload" class="panel">
+          </div> <!-- suite-Facebook-class-passed -->
+        </div> <!-- panel Facebook -->
+        <div panel-name="test-xml-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryUpload.xml</span>
+            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runFacebookTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;JQueryUpload&quot;&gt;
-  &lt;parameter name=&quot;url&quot; value=&quot;https://blueimp.github.io/jQuery-File-Upload/&quot;/&gt;
+&lt;suite name=&quot;Facebook&quot;&gt;
+  &lt;parameter name=&quot;url&quot; value=&quot;https://www.facebook.com//&quot;/&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;commonJquery.MethodListener&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.jquery.datatable.Level_11_Upload_Files&quot;/&gt;
+      &lt;class name=&quot;com.facebook.register.Level_13_Element_Undisplayed&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
-&lt;/suite&gt; &lt;!-- JQueryUpload --&gt;
+&lt;/suite&gt; &lt;!-- Facebook --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-JQueryUpload" class="panel">
+        <div panel-name="testlist-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for JQueryUpload</span>
+            <span class="header-content">Tests for Facebook</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
@@ -177,82 +192,90 @@
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-JQueryUpload" class="panel">
+        <div panel-name="group-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for JQueryUpload</span>
+            <span class="header-content">Groups for Facebook</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-JQueryUpload" class="panel">
+        <div panel-name="times-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for JQueryUpload</span>
+            <span class="header-content">Times for Facebook</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_JQueryUpload');
-function tableData_JQueryUpload() {
+suiteTableInitFunctions.push('tableData_Facebook');
+function tableData_Facebook() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Upload_02_Multi_Files_Per_Time')
-data.setCell(0, 2, 'com.jquery.datatable.Level_11_Upload_Files')
-data.setCell(0, 3, 21993);
+data.setCell(0, 1, 'TC_01_Verify_Element_Displayed')
+data.setCell(0, 2, 'com.facebook.register.Level_13_Element_Undisplayed')
+data.setCell(0, 3, 3);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Upload_01_One_File_Per_Time')
-data.setCell(1, 2, 'com.jquery.datatable.Level_11_Upload_Files')
-data.setCell(1, 3, 5370);
-window.suiteTableData['JQueryUpload']= { tableData: data, tableDiv: 'times-div-JQueryUpload'}
+data.setCell(1, 1, 'TC_02_Verify_Element_Undisplayed_In_DOM')
+data.setCell(1, 2, 'com.facebook.register.Level_13_Element_Undisplayed')
+data.setCell(1, 3, 1);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'TC_03_Verify_Element_Undisplayed_Not_In_DOM')
+data.setCell(2, 2, 'com.facebook.register.Level_13_Element_Undisplayed')
+data.setCell(2, 3, 1);
+window.suiteTableData['Facebook']= { tableData: data, tableDiv: 'times-div-Facebook'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
-              <div id="times-div-JQueryUpload">
-              </div> <!-- times-div-JQueryUpload -->
+              <span class="suite-total-time">Total running time: 5 ms</span>
+              <div id="times-div-Facebook">
+              </div> <!-- times-div-Facebook -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-JQueryUpload" class="panel">
+        <div panel-name="reporter-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for JQueryUpload</span>
+            <span class="header-content">Reporter output for Facebook</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-JQueryUpload" class="panel">
+        <div panel-name="ignored-methods-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-JQueryUpload" class="panel">
+        <div panel-name="chronological-Facebook" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.jquery.datatable.Level_11_Upload_Files</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.facebook.register.Level_13_Element_Undisplayed</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(chrome, https://blueimp.github.io/jQuery-File-Upload/)</span>
+                <span class="method-name">beforeClass(chrome, https://www.facebook.com//)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Upload_01_One_File_Per_Time</span>
-                <span class="method-start">7368 ms</span>
+                <span class="method-name">TC_01_Verify_Element_Displayed</span>
+                <span class="method-start">3982 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Upload_02_Multi_Files_Per_Time</span>
-                <span class="method-start">12739 ms</span>
+                <span class="method-name">TC_02_Verify_Element_Undisplayed_In_DOM</span>
+                <span class="method-start">3986 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_03_Verify_Element_Undisplayed_Not_In_DOM</span>
+                <span class="method-start">3988 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">34733 ms</span>
+                <span class="method-start">3989 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
