--- a/test-output/index.html
+++ b/test-output/index.html
@@ -154,6 +154,11 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;NopCommerce&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;commonJquery.MethodListener&quot;/&gt;
+    &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
+    &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
@@ -201,16 +206,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
-data.setCell(0, 3, 5841);
+data.setCell(0, 3, 4837);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
-data.setCell(1, 3, 4658);
+data.setCell(1, 3, 3191);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -243,15 +248,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">3164 ms</span>
+                <span class="method-start">3932 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">9008 ms</span>
+                <span class="method-start">8771 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">13668 ms</span>
+                <span class="method-start">11963 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
