--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97fbdb">  <td>22/11/15 17:23:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_14_Log_ReportNG.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489743810</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>22/11/15 17:23:57</td>   <td>3157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">User_01_Register</td> 
-  <td>main@1489743810</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>22/11/15 17:24:03</td>   <td>9001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">User_02_Login</td> 
-  <td>main@1489743810</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>22/11/15 17:24:08</td>   <td>13661</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_14_Log_ReportNG.afterClass()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489743810</td>   <td></td> </tr>
+<tr bgcolor="ea8470">  <td>22/11/16 14:47:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_14_Log_ReportNG.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@3ad83a66]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
+<tr bgcolor="ea8470">  <td>22/11/16 14:47:56</td>   <td>3925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@3ad83a66]">User_01_Register</td> 
+  <td>main@925973605</td>   <td></td> </tr>
+<tr bgcolor="ea8470">  <td>22/11/16 14:48:01</td>   <td>8764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@3ad83a66]">User_02_Login</td> 
+  <td>main@925973605</td>   <td></td> </tr>
+<tr bgcolor="ea8470">  <td>22/11/16 14:48:04</td>   <td>11956</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_14_Log_ReportNG.afterClass()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@3ad83a66]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925973605</td>   <td></td> </tr>
 </table>
